# diem

./: .dockerignore  .gitignore  .mailmap  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md
api/: Cargo.toml  Makefile  README.md
api/doc/: CHANGELOG.md  README.md  spec.html  spec.json  spec.yaml
api/fuzzing/: README.md
api/goldens/: diem_api__tests__invalid_post_request_test__test_invalid_payload_type.json  diem_api__tests__transactions_test__test_get_transactions_output_genesis_transaction.json  diem_api__tests__transactions_test__test_get_transactions_output_user_transaction_with_entry_function_payload.json  diem_api__tests__transactions_test__test_get_transactions_param_limit_exceeds_limit.json  diem_api__tests__transactions_test__test_get_transactions_returns_last_page_when_start_version_is_not_specified.json  diem_api__tests__transactions_test__test_get_txn_execute_failed_by_entry_function_validation.json  diem_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_address.json  diem_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_arguments.json  diem_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_module_name.json  diem_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_name.json  diem_api__tests__transactions_test__test_get_txn_execute_failed_by_missing_entry_function_arguments.json  diem_api__tests__transactions_test__test_post_bcs_format_transaction.json
api/move-test-package/: Move.toml
api/openapi-spec-generator/: Cargo.toml
api/openapi-spec-generator/src/: fake_context.rs  main.rs
api/src/: accept_type.rs  accounts.rs  basic.rs  bcs_payload.rs  blocks.rs  check_size.rs  context.rs  error_converter.rs  events.rs  failpoint.rs  index.rs  lib.rs  log.rs  metrics.rs  page.rs  response.rs  runtime.rs  set_failpoints.rs  state.rs  transactions.rs  view_function.rs
api/src/tests/: accounts_test.rs  blocks_test.rs  converter_test.rs  events_test.rs  index_test.rs  invalid_post_request_test.rs  mod.rs  modules.rs  multisig_transactions_test.rs  objects.rs  resource_groups.rs  state_test.rs  string_resource_test.rs  transaction_vector_test.rs  transactions_test.rs  view_function.rs
api/test-context/: Cargo.toml
api/test-context/move/: Move.toml
api/test-context/src/: golden_output.rs  lib.rs  test_context.rs
api/types/: Cargo.toml
api/types/src/: account.rs  address.rs  block.rs  bytecode.rs  convert.rs  derives.rs  error.rs  hash.rs  headers.rs  index.rs  ledger_info.rs  lib.rs  mime_types.rs  move_types.rs  state.rs  table.rs  transaction.rs  view.rs  wrappers.rs
config/: Cargo.toml  README.md
config/global-constants/: Cargo.toml
config/global-constants/src/: lib.rs
config/src/: generator.rs  keys.rs  lib.rs  network_id.rs  utils.rs
config/src/config/: api_config.rs  base_config.rs  config_optimizer.rs  config_sanitizer.rs  consensus_config.rs  error.rs  execution_config.rs  gas_estimation_config.rs  identity_config.rs  indexer_config.rs  indexer_grpc_config.rs  inspection_service_config.rs  logger_config.rs  mempool_config.rs  mod.rs  network_config.rs  node_config.rs  node_config_loader.rs  peer_monitoring_config.rs  persistable_config.rs  quorum_store_config.rs  safety_rules_config.rs  secure_backend_config.rs  state_sync_config.rs  storage_config.rs  utils.rs
consensus/: Cargo.toml  README.md
consensus/consensus-types/: Cargo.toml
consensus/consensus-types/src/: block.rs  block_data.rs  block_retrieval.rs  block_test.rs  block_test_utils.rs  common.rs  epoch_retrieval.rs  executed_block.rs  lib.rs  proof_of_store.rs  proposal_msg.rs  quorum_cert.rs  request_response.rs  safety_data.rs  sync_info.rs  timeout_2chain.rs  vote.rs  vote_data.rs  vote_msg.rs  vote_proposal.rs
consensus/safety-rules/: Cargo.toml
consensus/safety-rules/benches/: safety_rules.rs
consensus/safety-rules/src/: consensus_state.rs  counters.rs  error.rs  fuzzing_utils.rs  lib.rs  local_client.rs  logging.rs  persistent_safety_storage.rs  process.rs  remote_service.rs  safety_rules.rs  safety_rules_2chain.rs  safety_rules_manager.rs  serializer.rs  t_safety_rules.rs  test_utils.rs  (+1 more)
consensus/src/: consensus_provider.rs  counters.rs  epoch_manager.rs  error.rs  lib.rs  logging.rs  metrics_safety_rules.rs  network.rs  network_interface.rs  network_tests.rs  payload_client.rs  payload_manager.rs  pending_votes.rs  persistent_liveness_storage.rs  recovery_manager.rs  round_manager.rs  round_manager_fuzzing.rs  round_manager_test.rs  sender_aware_shuffler.rs  state_computer.rs  state_replication.rs  transaction_deduper.rs  transaction_shuffler.rs  txn_hash_and_authenticator_deduper.rs  txn_notifier.rs
crates/channel/: Cargo.toml
crates/crash-handler/: Cargo.toml
crates/diem-compression/: Cargo.toml
crates/diem-genesis/: Cargo.toml
crates/diem-github-client/: Cargo.toml
crates/diem-id-generator/: Cargo.toml
crates/diem-keygen/: Cargo.toml
crates/diem-ledger/: Cargo.toml  README.md
crates/diem-logger/: Cargo.toml
crates/diem-network-checker/: Cargo.toml
crates/diem-protos/: Cargo.toml  README.md
crates/diem-rest-client/: Cargo.toml
crates/diem-rosetta/: Cargo.toml  README.md  diem.ros  rosetta_cli.json
crates/diem-rosetta-cli/: Cargo.toml  README.md
crates/diem-speculative-state-helper/: Cargo.toml
crates/diem-telemetry/: Cargo.toml
crates/diem-telemetry-service/: Cargo.toml
diem-node/: Cargo.toml
diem-node/src/: indexer.rs  lib.rs  logger.rs  main.rs  network.rs  services.rs  state_sync.rs  storage.rs  tests.rs  utils.rs
mempool/: Cargo.toml  README.md
mempool/src/: counters.rs  lib.rs  logging.rs  thread_pool.rs
network/: Cargo.toml  README.md
network/builder/: Cargo.toml
network/discovery/: Cargo.toml
network/memsocket/: Cargo.toml
network/netcore/: Cargo.toml
network/src/: constants.rs  counters.rs  error.rs  fuzzing.rs  lib.rs  logging.rs
vm-validator/: Cargo.toml
vm-validator/src/: lib.rs  vm_validator.rs
(+2931 files in other folders)
