[package]
name = "diem-api"
description = "Diem REST API"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-api-types = { workspace = true }
diem-build-info = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-gas = { workspace = true }
diem-logger = { workspace = true }
diem-mempool = { workspace = true }
diem-metrics-core = { workspace = true }
diem-runtimes = { workspace = true }
diem-state-view = { workspace = true }
diem-storage-interface = { workspace = true }
diem-types = { workspace = true }
diem-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
move-core-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
diem-api-test-context = { workspace = true }
diem-cached-packages = { workspace = true }
diem-framework = { workspace = true }
diem-gas = { workspace = true, features = ["testing"] }
diem-proptest-helpers = { workspace = true }
diem-sdk = { workspace = true }
move-package = { workspace = true }
percent-encoding = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
warp = { workspace = true }

[features]
failpoints = ["fail/failpoints"]
