[package]
name = "diem-config"
description = "Diem config"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-crypto = { workspace = true }
diem-crypto-derive = { workspace = true }
diem-global-constants = { workspace = true }
diem-logger = { workspace = true }
diem-secure-storage = { workspace = true }
diem-short-hex-str = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
cfg-if = { workspace = true }
cfg_block = { workspace = true }
get_if_addrs = { workspace = true }
mirai-annotations = { workspace = true }
num_cpus = { workspace = true }
poem-openapi = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_merge = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
diem-crypto = { workspace = true }
diem-types = { workspace = true, features = ["fuzzing"] }

[features]
default = []
fuzzing = ["diem-crypto/fuzzing", "diem-types/fuzzing"]
network-perf-test = []
testing = []
