[package]
name = "diem-network"
description = "Diem networking stack"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-bitvec = { workspace = true }
diem-channels = { workspace = true }
diem-compression = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-crypto-derive = { workspace = true }
diem-id-generator = { workspace = true }
diem-infallible = { workspace = true }
diem-logger = { workspace = true }
diem-memsocket = { workspace = true, optional = true }
diem-metrics-core = { workspace = true }
diem-netcore = { workspace = true }
diem-num-variants = { workspace = true }
diem-peer-monitoring-service-types = { workspace = true }
diem-proptest-helpers = { workspace = true, optional = true }
diem-rate-limiter = { workspace = true }
diem-short-hex-str = { workspace = true }
diem-time-service = { workspace = true }
diem-types = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
once_cell = { workspace = true }
pin-project = { workspace = true }
proptest ={ workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rand = { workspace = true, features = ["small_rng"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
diem-bitvec = { workspace = true, features = ["fuzzing"] }
diem-config = { workspace = true, features = ["testing"] }
diem-memsocket = { workspace = true }
diem-netcore = { workspace = true, features = ["testing"] }
diem-proptest-helpers = { workspace = true }
diem-time-service = { workspace = true, features = ["testing"] }
diem-types = { workspace = true, features = ["fuzzing"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand_core = { workspace = true }

[features]
default = []
fuzzing = ["diem-bitvec/fuzzing", "diem-config/fuzzing", "diem-crypto/fuzzing", "diem-types/fuzzing", "diem-proptest-helpers", "diem-time-service/testing", "diem-types/fuzzing", "diem-memsocket/testing", "diem-netcore/fuzzing", "proptest", "proptest-derive"]
testing = ["diem-config/testing", "diem-time-service/testing", "diem-memsocket/testing", "diem-netcore/testing"]
